--- a/frontend/src/styles/PhotoDetailsModal.scss
+++ b/frontend/src/styles/PhotoDetailsModal.scss
@@ -6,8 +6,8 @@
   top: 55%;
   left: 50%;
   transform: translate(-50%, -40%);
-  height: 80%;
-  width: 55%;
+  height: 50%;
+  width: 50%;
   overflow-y: scroll;
   border-radius: 12px;
 }
@@ -26,13 +26,17 @@
 }
 
 .photo-details-modal__images {
-  margin-left: 36px;
+  margin-left: 100px;
   margin-top: 8px;
+  
+
 }
 
 .photo-details-modal__image {
   max-width: 95%;
   border-radius: 8px;
+  max-width: 500px;
+  max-height: 500px;
 }
 
 .photo-details-modal__top-bar {
