--- a/frontend/src/styles/PhotoListItem.scss
+++ b/frontend/src/styles/PhotoListItem.scss
@@ -1,25 +1,29 @@
 .photo-list__item {
-  // margin: 24px;
-  padding: 16px;
-  border-width: 1px;
+  display: flex;
+  flex-direction: column;
+  margin: 24px;
+  padding: 8px;
+  border-width: 0.5px;
   border-color: lightgray;
-  background-color: #fff;
   border-style: solid;
   border-radius: 8px;
-  max-width:fit-content;
-  width:auto;}
-
-
-  .photo-list__image {
-    border-radius: 8px 8px 0px 0px;
-    user-select: none;
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
+  max-width: fit-content;
   }
-  
-  
 
+.photo-list__image {
+  user-select: none;
+  width: 300px;
+  height: 200px;
+  object-fit: cover;
+}
+
+.photo-list__image {
+  border-radius: 8px 8px 0px 0px;
+  user-select: none;
+  width: 300px;
+  height: 200px;
+  object-fit: cover;
+}
 
 .photo-list__user-profile {
   object-fit: cover;
@@ -32,21 +36,21 @@
 
 .photo-list__user-details {
   display: flex;
-  align-items: center;
-  margin: 11px 0 0;
- 
 }
 
 .photo-list__user-info {
   margin-top: 5px;
   font-weight: 700;
   font-size: 12px;
-  margin: 0;
-  text-align: left;
+  margin-left: 8px;
 }
 
 .photo-list__user-location {
   color: #838383;
-  margin: 0;
-  text-align: left;
+}
+
+
+.photo-list__user-details-align {
+margin-left: 40px;
+margin-top: 15px;
 }
